src/css/code/diff.css
/* Attributes generted by https://shiki.style/packages/transformers#transformernotationdiff */

pre.has-diff .diff.remove,
/* For <FileRemoved> */
  /* biome-ignore format: */
  .diff-entire-file-removed code {
  background-color: #fbdcda !important;
}

pre.has-diff .diff.add,
/* For <FileAdded> */
  /* biome-ignore format: */
  .diff-entire-file-added code {
  background-color: #d7ecdf !important;
}

pre.has-diff [data-line].diff,
.diff-entire-file [data-line] {
  position: relative;
}

pre.has-diff .diff::before,
/* For <FileRemoved> / <FileAdded> */
  /* biome-ignore format: */
  .diff-entire-file [data-line]::before {
  position: absolute;
  font-weight: 500;
}

pre.has-diff .diff.add::before,
/* For <FileAdded> */
  /* biome-ignore format: */
  .diff-entire-file-added [data-line]::before {
  content: '+';
  color: #89d189;
  font-size: 1.2em;
  top: -1px;
  left: 3px;
}

pre.has-diff .diff.remove::before,
/* For <FileRemoved> */
  /* biome-ignore format: */
  .diff-entire-file-removed [data-line]::before {
  content: '-';
  color: #f18383;
  font-size: 1.4em;
  top: -5px;
  left: 2px;
}

